[package]
name = "bspwm-sss"
version = "0.1.0"
authors = ["Jess Balint <jbalint@gmail.com>"]

[dependencies]
futures = "*"

libc = "*"

ctrlc = "*"

time = "*"

#urlencoded = "*"
url = "*"

reqwest = ">= 0.9.5"

x11 = { version = "*", features = ["xlib"] }

log = "*"
pretty_env_logger = "*"

error-chain = "*"

xcb = "*"